fix visibility of dialog

--- a/css/eventdialog.css
+++ b/css/eventdialog.css
@@ -98,6 +98,10 @@
 	padding: 20px;
 }
 
+.fc-row.fc-rigid {
+	overflow: visible !important;
+}
+
 .advanced--container {
 	padding: 20px;
 }
